data/forge_javadoc/1.7.10/processed/net_minecraft_entity_monster_EntityWitch.md
# EntityWitch

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.monster.EntityMob → net.minecraft.entity.monster.EntityWitch

## Class signature

```java
public class EntityWitch extends EntityMob implements IRangedAttackMob
```

## Methods

- `protected void applyEntityAttributes()`
- `protected float applyPotionDamageCalculations(DamageSource p_70672_1_, float p_70672_2_)`
- `void attackEntityWithRangedAttack(EntityLivingBase p_82196_1_, float p_82196_2_)`
- `protected void dropFewItems(boolean p_70628_1_, int p_70628_2_)`
- `protected void entityInit()`
- `boolean getAggressive()`
- `protected java.lang.String getDeathSound()`
- `protected java.lang.String getHurtSound()`
- `protected java.lang.String getLivingSound()`
- `void handleHealthUpdate(byte p_70103_1_)`
- `boolean isAIEnabled()`
- `void onLivingUpdate()`
- `void setAggressive(boolean p_82197_1_)`

## Fields

- `EntityWitch`